Bug 763351: Fix cache hit rate telemetry so that kCacheMissedViaReval gets reported, r=hurley, a=akeybl